fix: update logo image and adjust width for better visibility

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ header{
     column-gap: 0.2rem;
 }
 .logo img{
-    width: 30px;
+    width: 100px;
 }
 .navbar{
     display: flex;
